--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -11,30 +11,30 @@
 <div class="cover">
    <div class="cover-text">
       <h1>Velkomen til Webiser</h1>
-      <p>Norges største web design og web utvikling firma</p>
+      <p id="coverText2">Norges største web design og web utvikling firma</p>
    </div>
 </div>
-<div class="services">
+<div class="services" id="services">
    <h1>Hvorfor velge Webiser?</h1>
-   <div class="icon">
+   <div class="icon" id="icon1">
       <i class="fas fa-users"></i>      
       <h1 id="servicesFirstText">Designere og utviklere</h1>
       <p id="servicesSecondText1">Vi har et stort og profesjonell team som er motiverte og lidenskapelige for å levere et fantastisk nettside, som garanterer at du vil elske den</p>
       <button id="readMoreServices1" onclick="servicesReadMore1()">Les mer</button>
    </div>
-   <div class="icon">
+   <div class="icon" id="icon2">
       <i class="fas fa-check"></i>
       <h1 id="servicesFirstText">Få 4 timer gratis hjelp hver uke</h1>
       <p id="servicesSecondText2">Vår team finner glede i å hjelpe deg, derfor du vil få 4 timer gratis hjelp og veiledning hver uke av våres designere og utviklere, for å sørge at alt er akkurat som du vil ha det</p>
       <button id="readMoreServices2" onclick="servicesReadMore2()">Les mer</button>
    </div>
-   <div class="icon">
+   <div class="icon" id="icon3">
       <i class="fal fa-phone-laptop"></i>      
       <h1 id="servicesFirstText">Responsiv og modern design</h1>
       <p id="servicesSecondText3">Et bra nettsted begynner med en modern og unik design, våres designere sørger at designen blir responsiv og modern og ikke minst akkurat som du ønsker at den skal være</p>
       <button id="readMoreServices3" onclick="servicesReadMore3()">Les mer</button>
    </div>
-   <div class="icon">
+   <div class="icon" id="icon4">
       <i class="fas fa-user-headset"></i>      
       <h1 id="servicesFirstText">24/7 kundeservice</h1>
       <p id="servicesSecondText4">Våres utviklere og designere kan hjelpe deg når som helst</p>
