--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -47,10 +47,15 @@ html, body {
       letter-spacing: 1px;
     }
     p{
+      opacity: 0;
+      transition: ease-in 1s;
       color: rgb(250, 250, 250);
       font-size: 16px;
       letter-spacing: 1px;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      &.active{
+        opacity: 1;
+      }
     }
   }
 }
@@ -62,6 +67,13 @@ html, body {
   padding-top: 40px;
   text-align: center;
   position: relative;
+  transition: all ease-in .5s;
+  &.active{
+    .icon{
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
   h1{
     font-size: 28px;
     color: rgb(15, 15, 15);
@@ -86,6 +98,9 @@ html, body {
     padding: 5px;
     display: inline-table;
     position: relative;
+    opacity: 0;
+    transition: all ease-in .5s;
+    transform: translateY(40px);
     i{
       margin: 30px;
       padding: 20px;
