--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -16,8 +16,8 @@
 
 <div id="navbar">
     <div class="logo" id="logo" onclick="window.location.href=''">
-        <img src="{% static '/images/logo/logo-name-white.png' %}" class="logo1" alt="logo1">
-        <img src="{% static '/images/logo/logo-name-black.png' %}" class="logo2" alt="logo2">
+        <img src="{% static '/images/logo/' %}" class="logo1" alt="logo1">
+        <img src="{% static '/images/logo/' %}" class="logo2" alt="logo2">
     </div>
     <!-- PHONE -->
     <div class="hamburger" id="hamburger" onclick="menu()">
