--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -18,7 +18,7 @@ html, body {
 .cover {
   position: relative;
   width: auto;
-  min-height: 110vh;
+  min-height: 80vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -28,46 +28,88 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.4)), to(rgba(0, 0, 0, 0.4))), url("/static/images/covers/cover-1.png");
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.png");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
+  background: #7890dc;
+}
+
+.cover img {
+  position: absolute;
+  left: 0;
+  top: 120px;
+  width: 100%;
+  height: auto;
 }
 
 .cover .cover-text {
-  -webkit-transform: translateY(-20px);
-          transform: translateY(-20px);
+  -webkit-transform: translateY(-20px) translateX(10px);
+          transform: translateY(-20px) translateX(10px);
   position: absolute;
-  text-align: center;
+  text-align: left;
   margin: 10px;
   margin-top: 0;
 }
 
 .cover .cover-text h1 {
-  font-size: 28px;
+  width: 100%;
+  font-size: 24px;
   color: #fafafa;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-weight: bold;
-  letter-spacing: 1px;
 }
 
 .cover .cover-text p {
-  opacity: 0;
   -webkit-transition: ease-in 1s;
   transition: ease-in 1s;
   color: #fafafa;
   font-size: 16px;
-  letter-spacing: 1px;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.cover .cover-text p.active {
-  opacity: 1;
+.cover .cover-buttons {
+  text-align: left;
+  -webkit-transform: translateY(30px);
+          transform: translateY(30px);
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.cover .cover-buttons a {
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  margin-top: 10px;
+  margin-right: 15px;
+  border-radius: 30px;
+  width: 130px;
+  font-size: 14px;
+  padding: 5px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  outline: none;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+
+.cover .cover-buttons a:nth-child(1) {
+  border: 2px solid transparent;
+  background: #485ab9;
+  color: white;
+  -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+          box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+}
+
+.cover .cover-buttons a:nth-child(2) {
+  background: transparent;
+  color: white;
+  -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+          box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+  border: 2px solid white;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
 }
 
 .services {
-  background: whitesmoke;
   width: 100%;
   height: auto;
   padding: 15px;
@@ -85,11 +127,10 @@ html, body {
 }
 
 .services h1 {
-  font-size: 28px;
+  font-size: 26px;
   color: #0f0f0f;
-  margin-bottom: 25px;
-  font-weight: bold;
-  letter-spacing: .5px;
+  margin-top: 32px;
+  margin-bottom: 40px;
 }
 
 .services h1#servicesFirstText {
@@ -122,9 +163,9 @@ html, body {
 .services .icon i {
   margin: 30px;
   padding: 20px;
-  color: #2d2d2d;
+  color: whitesmoke;
   font-size: 50px;
-  background: rgba(53, 173, 197, 0.6);
+  background: #7890dc;
   border-radius: 25px;
 }
 
@@ -142,14 +183,14 @@ html, body {
 .services .icon button {
   margin-top: 10px;
   border-radius: 30px;
-  border: 2px solid #2d2d2d;
+  border: 2px solid transparent;
   color: #1e1e1e;
   width: 100px;
   font-size: 15px;
   padding: 5px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  background: #2d2d2d;
+  background: #485ab9;
   color: white;
   outline: none;
 }
@@ -157,6 +198,7 @@ html, body {
 .services .icon button.active {
   background: white;
   color: black;
+  border-color: black;
 }
 
 .product-section {
@@ -165,7 +207,6 @@ html, body {
   padding-top: 20px;
   padding-bottom: 20px;
   text-align: center;
-  background: whitesmoke;
 }
 
 .product-section h1 {
@@ -187,7 +228,7 @@ html, body {
 .product-section .product-card {
   -webkit-box-shadow: 0px 1px 5px #464646;
           box-shadow: 0px 1px 5px #464646;
-  max-width: 330px;
+  max-width: 300px;
   height: auto;
   margin: 20px auto;
   position: relative;
@@ -387,21 +428,20 @@ html, body {
   height: auto;
   padding-top: 20px;
   padding-bottom: 20px;
-  background: whitesmoke;
   text-align: center;
 }
 
 .contact-us h1 {
-  font-size: 28px;
-  font-weight: 500;
+  font-size: 26px;
   color: #0f0f0f;
+  margin-top: 32px;
   margin-bottom: 5px;
 }
 
 .contact-us p {
   font-size: 18px;
   color: #0f0f0f;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
 }
 
 .contact-us form {
@@ -422,6 +462,7 @@ html, body {
   border: 1px solid #787878;
   border-radius: 3px;
   padding: 3px;
+  height: 100px;
 }
 
 .contact-us form input {
@@ -437,14 +478,15 @@ html, body {
 
 .contact-us form .form-actions button {
   border-radius: 30px;
-  border: 2px solid black;
+  border: 2px solid transparent;
   color: #1e1e1e;
+  background: #485ab9;
   width: 200px;
   font-size: 16px;
   padding: 5px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  background: #2d2d2d;
+  background: 245;
   color: white;
 }
 
