--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -22,45 +22,74 @@ html, body {
 .cover{ 
   position: relative;
   width: auto;
-  min-height: 110vh;
+  min-height: 80vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background:linear-gradient(rgba(0, 0, 0 ,0.4), rgba(0, 0, 0, 0.4)), url("/static/images/covers/cover-1.png");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  -o-background-size: cover;
-  -moz-background-size: cover;
-  -webkit-background-size:cover;
-    background-size: cover;
-  .cover-text{
-    transform: translateY(-20px);
+  background: rgb(120, 144, 220);
+  img{
     position: absolute;
-    text-align: center;
+    left: 0;
+    top: 120px;
+    width: 100%;
+    height: auto;
+  }
+  .cover-text{
+    transform: translateY(-20px) translateX(10px);
+    position: absolute;
+    text-align: left;
     margin: 10px;
     margin-top: 0;
     h1{
-      font-size: 28px;
+      width: 100%;
+      font-size: 24px;
       color: rgb(250, 250, 250);
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      font-weight: bold;
-      letter-spacing: 1px;
     }
     p{
-      opacity: 0;
       transition: ease-in 1s;
       color: rgb(250, 250, 250);
       font-size: 16px;
-      letter-spacing: 1px;
-      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-      &.active{
-        opacity: 1;
+    }
+  }
+  .cover-buttons{
+    text-align: left;
+    transform: translateY(30px);
+    width: 100%;
+    display: flex;
+    a{
+      text-decoration: none;
+      text-align: center;
+      display: inline-block;
+      margin-top: 10px;
+      margin-right: 15px;
+      border-radius: 30px;
+      width: 130px;
+      font-size: 14px;
+      padding: 5px;
+      transition: all .2s ease-in-out;
+      outline: none;
+      text-transform: uppercase;
+      font-family: 'Oswald', sans-serif;
+      font-weight: 600;
+      letter-spacing: 0.5px;
+      &:nth-child(1){
+        border: 2px solid transparent;
+        background: rgb(72, 90, 185);
+        color: white;
+        box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+      }
+      &:nth-child(2){
+        background: transparent;
+        color: white;
+        box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+        border: 2px solid white;
+        backdrop-filter: blur(20px);
       }
     }
   }
 }
 .services{
-  background: rgb(245, 245, 245);
   width: 100%;
   height: auto;
   padding: 15px;
@@ -75,11 +104,10 @@ html, body {
     }
   }
   h1{
-    font-size: 28px;
+    font-size: 26px;
     color: rgb(15, 15, 15);
-    margin-bottom: 25px;
-    font-weight: bold;
-    letter-spacing: .5px;
+    margin-top: 32px;
+    margin-bottom: 40px;
     &#servicesFirstText{
       font-weight: unset;
     }
@@ -104,9 +132,9 @@ html, body {
     i{
       margin: 30px;
       padding: 20px;
-      color: rgb(45, 45, 45);
+      color: rgb(245, 245, 245);
       font-size: 50px;
-      background: rgba(53, 173, 197, 0.6);
+      background: rgb(120, 144, 220);
       border-radius: 25px;
     }
     h1{
@@ -121,18 +149,19 @@ html, body {
     button{
       margin-top: 10px;
       border-radius: 30px;
-      border: 2px solid rgb(45, 45, 45);
+      border: 2px solid transparent;
       color: rgb(30, 30, 30);
       width: 100px;
       font-size: 15px;
       padding: 5px;
       transition: all .2s ease-in-out;
-      background: rgb(45, 45, 45);
+      background: rgb(72, 90, 185);
       color: white;
       outline: none;
       &.active{
         background: white;
         color: black;
+        border-color: black;
       }
     }
   }
@@ -143,7 +172,6 @@ html, body {
   padding-top: 20px;
   padding-bottom: 20px;
   text-align: center;
-  background: rgb(245, 245, 245);
   h1{
     font-size: 28px;
     font-weight: bold;
@@ -159,7 +187,7 @@ html, body {
   }
   .product-card{
     box-shadow: 0px 1px 5px rgb(70, 70, 70);
-    max-width: 330px;
+    max-width: 300px;
     height: auto;
     margin: 20px auto;
     position: relative;
@@ -326,18 +354,17 @@ html, body {
   height: auto;
   padding-top: 20px;
   padding-bottom: 20px;
-  background: rgb(245, 245, 245);
   text-align: center;
   h1{
-    font-size: 28px;
-    font-weight: 500;
+    font-size: 26px;
     color: rgb(15, 15, 15);
+    margin-top: 32px;
     margin-bottom: 5px;
   }
   p{
     font-size: 18px;
     color: rgb(15, 15, 15);
-    margin-bottom: 5px;
+    margin-bottom: 0px;
   }
   form{
     text-align: left;
@@ -354,6 +381,7 @@ html, body {
       border: 1px solid rgb(120, 120, 120);
       border-radius: 3px;
       padding: 3px;
+      height: 100px;
     }
     input{
       width: 100%;
@@ -365,13 +393,14 @@ html, body {
       margin-top: 15px;
       button{
         border-radius: 30px;
-        border: 2px solid black;
+        border: 2px solid transparent;
         color: rgb(30, 30, 30);
+        background: rgb(72, 90, 185);
         width: 200px;
         font-size: 16px;
         padding: 5px;
         transition: all .2s ease-in-out;
-        background: rgb(45, 45, 45);
+        background: 245;
         color: white;
         &:hover{
           background: white;
