--- a/apps/core/templates/core/base.html
+++ b/apps/core/templates/core/base.html
@@ -32,7 +32,7 @@
         #navBarSpace{
             width: 100%;
             height: 50px;
-            background: #2d9cb3;
+            background: rgb(120, 144, 220);
         }
         #navbar{
             margin-top: 0;
