--- a/static/scss/base.css
+++ b/static/scss/base.css
@@ -73,15 +73,23 @@ html, body {
 }
 
 .cover .cover-buttons a {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
   text-align: center;
-  display: inline-block;
   margin-top: 10px;
   margin-right: 15px;
   border-radius: 30px;
   width: 130px;
   font-size: 14px;
-  padding: 5px;
+  padding: 6px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
   outline: none;
@@ -93,7 +101,7 @@ html, body {
 
 .cover .cover-buttons a:nth-child(1) {
   border: 2px solid transparent;
-  background: #485ab9;
+  background: #3e50af;
   color: white;
   -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
           box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
@@ -110,6 +118,7 @@ html, body {
 }
 
 .services {
+  background: white;
   width: 100%;
   height: auto;
   padding: 15px;
@@ -162,6 +171,7 @@ html, body {
 
 .services .icon i {
   margin: 30px;
+  margin-bottom: -15px;
   padding: 20px;
   color: whitesmoke;
   font-size: 50px;
@@ -202,152 +212,77 @@ html, body {
 }
 
 .product-section {
+  background: white;
+  text-align: center;
   width: 100%;
   height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: center;
+}
+
+.product-section.active .product-card {
+  opacity: 1;
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
 .product-section h1 {
-  font-size: 28px;
-  font-weight: bold;
+  font-size: 26px;
   color: #0f0f0f;
-  margin-bottom: 45px;
-}
-
-.product-section .border {
-  background: #646464;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
-  height: 2px;
-  width: 65%;
-  margin: 20px auto;
+  margin-top: 32px;
+  margin-bottom: 50px;
 }
 
 .product-section .product-card {
-  -webkit-box-shadow: 0px 1px 5px #464646;
-          box-shadow: 0px 1px 5px #464646;
-  max-width: 300px;
-  height: auto;
-  margin: 20px auto;
-  position: relative;
-  border-radius: 15px;
-}
-
-.product-section .product-card .border {
-  background: #828282;
-  -webkit-transform: translateY(-60px);
-          transform: translateY(-60px);
-  height: 2px;
-  width: 65%;
-  margin: 0 auto;
+  margin: 30px;
+  border-radius: 5%;
+  background: #485ab9;
+  padding: 5px;
+  opacity: 0;
+  -webkit-transition: all ease-in .5s;
+  transition: all ease-in .5s;
+  -webkit-transform: translateY(40px);
+          transform: translateY(40px);
 }
 
 .product-section .product-card .text .product-name {
-  padding: 10px;
-  font-size: 26px;
-  font-weight: bold;
-}
-
-.product-section .product-card .text .product-price {
-  -webkit-transform: translateY(-40px);
-          transform: translateY(-40px);
-  font-size: 16px;
-  color: #787878;
-}
-
-.product-section .product-card .buttons-product-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 100%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.product-section .product-card .buttons-product-section a {
-  border-radius: 5px;
-  border: 2px solid transparent;
-  font-size: 18px;
-  margin: 10px;
-  width: 50%;
-  padding: 5px;
-  background: #2d2d2d;
+  font-size: 22px;
   color: white;
 }
 
-.reviews {
+.product-section .product-card .text .product-price {
+  font-size: 18px;
+  opacity: 0.8;
+  color: white;
+}
+
+.product-section .product-card .button-product-section {
   width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background: whitesmoke;
+  padding: 5px;
+}
+
+.product-section .product-card .button-product-section .btn-details {
+  outline: none;
+  background: transparent;
+  color: white;
+  -webkit-box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+          box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+  border: 2px solid white;
+  -webkit-backdrop-filter: blur(20px);
+          backdrop-filter: blur(20px);
+  text-decoration: none;
   text-align: center;
-}
-
-.reviews .border {
-  background: #646464;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
-  height: 2px;
-  width: 65%;
-  margin: 20px auto;
-}
-
-.reviews h1 {
-  font-size: 28px;
-  font-weight: bold;
-  color: #0f0f0f;
-  margin-bottom: 20px;
-}
-
-#frontend {
-  background: whitesmoke;
-  text-align: center;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#frontend h1 {
-  font-size: 28px;
-  font-weight: bold;
-  color: #0f0f0f;
-  margin-bottom: 25px;
-}
-
-#frontend .frontend {
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#frontend .frontend h1 {
-  font-size: 22px;
-  font-weight: bold;
-  color: #0f0f0f;
-  margin-bottom: 20px;
-}
-
-#frontend .frontend img {
-  width: 250px;
-  height: 220px;
-}
-
-#frontend .frontend.javascript .border {
-  background: #646464;
-  -webkit-transform: translateY(30px);
-          transform: translateY(30px);
-  height: 2px;
-  width: 65%;
-  margin: 20px auto;
+  margin-top: 10px;
+  margin-right: 15px;
+  border-radius: 30px;
+  width: 130px;
+  font-size: 14px;
+  padding: 6px;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+  outline: none;
+  text-transform: uppercase;
+  font-family: 'Oswald', sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.5px;
 }
 
 .about-us {
@@ -355,7 +290,7 @@ html, body {
   height: auto;
   padding-top: 20px;
   padding-bottom: 20px;
-  background: whitesmoke;
+  background: white;
   text-align: center;
 }
 
@@ -369,17 +304,10 @@ html, body {
 }
 
 .about-us h1 {
-  font-size: 28px;
-  font-weight: 500;
+  font-size: 26px;
   color: #0f0f0f;
-  margin-bottom: 20px;
-}
-
-.about-us img {
-  width: 80px;
-  height: 20px;
-  -webkit-transform: translateY(-20px);
-          transform: translateY(-20px);
+  margin-top: 32px;
+  margin-bottom: 45px;
 }
 
 .about-us .text {
@@ -406,14 +334,14 @@ html, body {
   -webkit-transform: translateY(30px);
           transform: translateY(30px);
   border-radius: 30px;
-  border: 2px solid black;
+  border: 2px solid transparent;
   color: #1e1e1e;
   width: 150px;
   font-size: 16px;
   padding: 5px;
   -webkit-transition: all .2s ease-in-out;
   transition: all .2s ease-in-out;
-  background: #2d2d2d;
+  background: #485ab9;
   color: white;
   outline: none;
 }
@@ -424,6 +352,7 @@ html, body {
 }
 
 .contact-us {
+  background: white;
   width: 100%;
   height: auto;
   padding-top: 20px;
