--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -58,15 +58,17 @@ html, body {
     width: 100%;
     display: flex;
     a{
+      display: flex;
+      justify-content: center;
+      align-items: center;
       text-decoration: none;
       text-align: center;
-      display: inline-block;
       margin-top: 10px;
       margin-right: 15px;
       border-radius: 30px;
       width: 130px;
       font-size: 14px;
-      padding: 5px;
+      padding: 6px;
       transition: all .2s ease-in-out;
       outline: none;
       text-transform: uppercase;
@@ -75,7 +77,7 @@ html, body {
       letter-spacing: 0.5px;
       &:nth-child(1){
         border: 2px solid transparent;
-        background: rgb(72, 90, 185);
+        background: rgb(62, 80, 175);
         color: white;
         box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
       }
@@ -90,6 +92,7 @@ html, body {
   }
 }
 .services{
+  background: white;
   width: 100%;
   height: auto;
   padding: 15px;
@@ -131,6 +134,7 @@ html, body {
     transform: translateY(40px);
     i{
       margin: 30px;
+      margin-bottom: -15px;
       padding: 20px;
       color: rgb(245, 245, 245);
       font-size: 50px;
@@ -167,125 +171,65 @@ html, body {
   }
 }
 .product-section{
+  background: white;
+  text-align: center;
   width: 100%;
   height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  text-align: center;
-  h1{
-    font-size: 28px;
-    font-weight: bold;
-    color: rgb(15, 15, 15);
-    margin-bottom: 45px;
+  &.active{
+    .product-card{
+      opacity: 1;
+      transform: translateY(0);
+    }
   }
-  .border{
-    background: rgb(100, 100, 100);
-    transform: translateY(30px);
-    height: 2px;
-    width: 65%;
-    margin: 20px auto;
+  h1{
+    font-size: 26px;
+    color: rgb(15, 15, 15);
+    margin-top: 32px;
+    margin-bottom: 50px;
   }
   .product-card{
-    box-shadow: 0px 1px 5px rgb(70, 70, 70);
-    max-width: 300px;
-    height: auto;
-    margin: 20px auto;
-    position: relative;
-    border-radius: 15px;
-    .border{
-      background: rgb(130, 130, 130);
-      transform: translateY(-60px);
-      height: 2px;
-      width: 65%;
-      margin: 0 auto;
-    }
+    margin: 30px;
+    border-radius: 5%;
+    background: rgb(72, 90, 185);
+    padding: 5px;
+    opacity: 0;
+    transition: all ease-in .5s;
+    transform: translateY(40px);
     .text{
       .product-name{
-        padding: 10px;
-        font-size: 26px;
-        font-weight: bold;
+        font-size: 22px;
+        color: white;
       }
       .product-price{
-        transform: translateY(-40px);
-        font-size: 16px;
-        color: rgb(120, 120, 120);
-      }
-    }
-    .buttons-product-section{
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-      a{
-        border-radius: 5px;
-        border: 2px solid transparent;
         font-size: 18px;
-        margin: 10px;
-        width: 50%;
-        padding: 5px;
-        background: rgb(45, 45, 45);
+        opacity: 0.8;
         color: white;
       }
     }
-  }
-}
-.reviews{
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background: rgb(245, 245, 245);
-  text-align: center;
-  .border{
-    background: rgb(100, 100, 100);
-    transform: translateY(30px);
-    height: 2px;
-    width: 65%;
-    margin: 20px auto;
-  }
-  h1{
-    font-size: 28px;
-    font-weight: bold;
-    color: rgb(15, 15, 15);
-    margin-bottom: 20px;
-  }
-}
-
-#frontend{
-  background: rgb(245, 245, 245);
-  text-align: center;
-  width: 100%;
-  height: auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  h1{
-    font-size: 28px;
-    font-weight: bold;
-    color: rgb(15, 15, 15);
-    margin-bottom: 25px;
-  }
-  .frontend{
-    width: 100%;
-    height: auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    h1{
-      font-size: 22px;
-      font-weight: bold;
-      color: rgb(15, 15, 15);
-      margin-bottom: 20px;
-    }
-    img{
-      width: 250px;
-      height: 220px;
-    }
-    &.javascript{
-      .border{
-        background: rgb(100, 100, 100);
-        transform: translateY(30px);
-        height: 2px;
-        width: 65%;
-        margin: 20px auto;
+    .button-product-section{
+      width: 100%;
+      padding: 5px;
+      .btn-details{
+        outline: none;
+        background: transparent;
+        color: white;
+        box-shadow: 0px 1px 1px rgba(230, 230, 230, 0.5);
+        border: 2px solid white;
+        backdrop-filter: blur(20px);
+        text-decoration: none;
+        text-align: center;
+        margin-top: 10px;
+        margin-right: 15px;
+        border-radius: 30px;
+        width: 130px;
+        font-size: 14px;
+        padding: 6px;
+        transition: all .2s ease-in-out;
+        outline: none;
+        text-transform: uppercase;
+        font-family: 'Oswald', sans-serif;
+        font-weight: 600;
+        letter-spacing: 0.5px;
       }
     }
   }
@@ -295,7 +239,7 @@ html, body {
   height: auto;
   padding-top: 20px;
   padding-bottom: 20px;
-  background: rgb(245, 245, 245);
+  background: white;
   text-align: center;
   .border{
     background: rgb(100, 100, 100);
@@ -305,15 +249,10 @@ html, body {
     margin: 20px auto;
   }
   h1{
-    font-size: 28px;
-    font-weight: 500;
+    font-size: 26px;
     color: rgb(15, 15, 15);
-    margin-bottom: 20px;
-  }
-  img{
-    width: 80px;
-    height: 20px;
-    transform: translateY(-20px);
+    margin-top: 32px;
+    margin-bottom: 45px;
   }
   .text{
     width: 100%;
@@ -333,13 +272,13 @@ html, body {
     button{
       transform: translateY(30px);
       border-radius: 30px;
-      border: 2px solid black;
+      border: 2px solid transparent;
       color: rgb(30, 30, 30);
       width: 150px;
       font-size: 16px;
       padding: 5px;
       transition: all .2s ease-in-out;
-      background: rgb(45, 45, 45);
+      background: rgb(72, 90, 185);
       color: white;
       outline: none;
       &:hover{
@@ -350,6 +289,7 @@ html, body {
   }
 }
 .contact-us{
+  background: white;
   width: 100%;
   height: auto;
   padding-top: 20px;
