--- a/static/scss/store/footer.css
+++ b/static/scss/store/footer.css
@@ -79,7 +79,7 @@
   left: 0;
   width: 100%;
   height: auto;
-  background: rgba(50, 50, 50, 0.9);
+  background: #485ab9;
   text-align: center;
 }
 
@@ -88,7 +88,6 @@
   margin: auto;
   color: #fafafa;
   font-size: 12px;
-  font-weight: bold;
 }
 
 @media only screen and (min-device-width: 1024px) {
