--- a/static/scss/store/footer.scss
+++ b/static/scss/store/footer.scss
@@ -59,14 +59,13 @@
         left: 0;
         width: 100%;
         height: auto;
-        background: rgba(50, 50, 50, 0.9);
+        background: rgb(72, 90, 185);
         text-align: center;
         p{
             padding: auto;
             margin: auto;
             color: rgb(250, 250, 250);
             font-size: 12px;
-            font-weight: bold;
         }
     }
 }
