--- a/static/scss/userprofile/login.scss
+++ b/static/scss/userprofile/login.scss
@@ -30,7 +30,7 @@
         }
         #logInButton{
             border-radius: 30px;
-            border: 2px solid rgb(45, 45, 45);
+            border: 2px solid transparent;
             color: rgb(30, 30, 30);
             display: inline-block;
             text-decoration: none;
@@ -38,13 +38,13 @@
             font-size: 18px;
             padding: 5px;
             transition: all .5s ease-in-out;
-            background: rgb(45, 45, 45);
+            background: rgb(72, 90, 185);
             color: white;
             outline: none;
         }
         span{
             border-radius: 30px;
-            border: 2px solid rgb(45, 45, 45);
+            border: 2px solid transparent;
             color: rgb(30, 30, 30);
             display: inline-block;
             text-decoration: none;
@@ -52,8 +52,8 @@
             font-size: 18px;
             padding: 5px;
             transition: all .5s ease-in-out;
-            background: white;
-            color: black;
+            color: rgb(72, 90, 185);
+            background: transparent;
         }
         &.active{
             display: block;
