--- a/static/scss/userprofile/signup.css
+++ b/static/scss/userprofile/signup.css
@@ -35,7 +35,7 @@
 
 .login-signup #signUpForm #signUpFormButton {
   border-radius: 30px;
-  border: 2px solid #2d2d2d;
+  border: 2px solid transparent;
   color: #1e1e1e;
   display: inline-block;
   text-decoration: none;
@@ -44,14 +44,14 @@
   padding: 5px;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
-  background: #2d2d2d;
+  background: #485ab9;
   color: white;
 }
 
 .login-signup #signUpForm span {
   text-align: center;
   border-radius: 30px;
-  border: 2px solid #2d2d2d;
+  border: 2px solid transparent;
   color: #1e1e1e;
   display: inline-block;
   text-decoration: none;
@@ -60,8 +60,8 @@
   padding: 5px;
   -webkit-transition: all .5s ease-in-out;
   transition: all .5s ease-in-out;
-  background: white;
-  color: black;
+  color: #485ab9;
+  background: transparent;
 }
 
 .login-signup #signUpForm.active {
