--- a/apps/core/templates/core/nav.html
+++ b/apps/core/templates/core/nav.html
@@ -30,7 +30,7 @@
             <li class="sidebar-li" id="sidebarLi">
                 <a onclick="prices()">Priser</a>
                 <a onclick="about()">Om oss</a>
-                <a onclick="frontend()">Info</a>
+                <a onclick="info()">Info</a>
                 <a onclick="contact()">Kontakt oss</a>
             </li>   
         </ul>
