--- a/static/scss/base.scss
+++ b/static/scss/base.scss
@@ -30,7 +30,7 @@ html, body {
   img{
     position: absolute;
     left: 0;
-    top: 120px;
+    top: 130px;
     width: 100%;
     height: auto;
   }
@@ -175,6 +175,16 @@ html, body {
   text-align: center;
   width: 100%;
   height: auto;
+  padding: 15px;
+  padding-top: 40px;
+  position: relative;
+  .border{
+    background: rgb(100, 100, 100);
+    height: 2px;
+    width: 65%;
+    margin: 20px auto;
+    transform: translateY(20px);
+  }
   &.active{
     .product-card{
       opacity: 1;
@@ -184,17 +194,17 @@ html, body {
   h1{
     font-size: 26px;
     color: rgb(15, 15, 15);
-    margin-top: 32px;
-    margin-bottom: 50px;
+    margin-bottom: 60px;
   }
   .product-card{
-    margin: 30px;
+    margin: 30px auto;
     border-radius: 5%;
     background: rgb(72, 90, 185);
     padding: 5px;
     opacity: 0;
     transition: all ease-in .5s;
     transform: translateY(40px);
+    max-width: 320px;
     .text{
       .product-name{
         font-size: 22px;
@@ -204,16 +214,6 @@ html, body {
         color: white;
         text-align: left;
         transform: translateX(23px);
-      }
-      li{
-        width: 100%;
-        color: white;
-        text-align: left;
-        font-size: 14px;
-        a{
-          color: white;
-          font-size: 14px;
-        }
       }
       .product-price{
         font-size: 18px;
@@ -245,6 +245,156 @@ html, body {
         font-family: 'Oswald', sans-serif;
         font-weight: 600;
         letter-spacing: 0.5px;
+      }
+    }
+  }
+}
+.proccess{
+  background: white;
+  width: 100%;
+  height: auto;
+  padding: 30px;
+  text-align: center;
+  position: relative;
+  &.active{
+    .content{
+      .class-1{
+        opacity: 1;
+        transform: translateY(0);
+        transition: all ease-in .2s;
+      }
+      .class-2{
+        opacity: 1;
+        transform: translateY(0);
+        transition: all ease-in .6s;
+      }
+      .class-3{
+        opacity: 1;
+        transform: translateY(0);
+      transition: all ease-in .8s;
+    }
+    .class-4{
+      opacity: 1;
+      transform: translateY(0);
+      transition: all ease-in 1s;
+    }
+    .class-5{
+      opacity: 1;
+      transform: translateY(0);
+      transition: all ease-in 1.2s;
+    }
+  }
+}
+  .border{
+    background: rgb(100, 100, 100);
+    height: 2px;
+    width: 65%;
+    margin: 20px auto;
+    transform: translateY(20px);
+  }
+  h1{
+    font-size: 26px;
+    color: rgb(15, 15, 15);
+    margin-bottom: 55px;
+    margin-top: 10px;
+  }
+  .content{
+    width: 100%;
+    height: auto;
+    margin: 0;
+    .class-1{
+      opacity: 0;
+      margin: 35px auto;
+      transform: translateY(40px);
+      h1{
+        font-size: 18px;
+        margin-bottom: 10px;
+      }
+      img{
+        width: 250px;
+        height: auto;
+        border-radius: 15px;
+        border: 1px solid rgb(120, 144, 220);
+      }
+      p{
+        margin-top: 5px;
+        font-size: 15px;
+      }
+    }
+    .class-2{
+      opacity: 0;
+      margin: 35px auto;
+      transform: translateY(40px);
+      h1{
+        font-size: 18px;
+        margin-bottom: 10px;
+      }
+      img{
+        width: 250px;
+        height: auto;
+        border-radius: 15px;
+        border: 1px solid rgb(120, 144, 220);
+      }
+      p{
+        margin-top: 5px;
+        font-size: 15px;
+      }
+    }
+    .class-3{
+      opacity: 0;
+      margin: 35px auto;
+      transform: translateY(40px);
+      h1{
+        font-size: 18px;
+        margin-bottom: 10px;
+      }
+      img{
+        width: 250px;
+        height: auto;
+        border-radius: 15px;
+        border: 1px solid rgb(120, 144, 220);
+      }
+      p{
+        margin-top: 5px;
+        font-size: 15px;
+      }
+    }
+    .class-4{
+      opacity: 0;
+      margin: 35px auto;
+      transform: translateY(40px);
+      h1{
+        font-size: 18px;
+        margin-bottom: 10px;
+      }
+      img{
+        width: 250px;
+        height: auto;
+        border-radius: 15px;
+        border: 1px solid rgb(120, 144, 220);
+      }
+      p{
+        margin-top: 5px;
+        font-size: 15px;
+      }
+    }
+    .class-5{
+      opacity: 0;
+      margin: 35px auto;
+      transform: translateY(40px);
+      h1{
+        font-size: 18px;
+        margin-bottom: 10px;
+      }
+      img{
+        width: 250px;
+        height: auto;
+        border-radius: 15px;
+        border: 1px solid rgb(120, 144, 220);
+      }
+      p{
+        margin-top: 5px;
+        font-size: 15px;
       }
     }
   }
